--- a/core/qt5/EditTargetDialog.ui
+++ b/core/qt5/EditTargetDialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>450</width>
+    <width>489</width>
     <height>350</height>
    </rect>
   </property>
@@ -120,6 +120,36 @@
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="passwordField"/>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="portEdit"/>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="portLabel">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Port</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="Line" name="line">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="Line" name="line_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
