--- a/core/qt5/InfoOpts.ui
+++ b/core/qt5/InfoOpts.ui
@@ -19,6 +19,193 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog *:enabled {
+color: #ffffff;
+}
+
+QTabWidget::tab-bar {
+background-color: #130e13;
+min-width: 21;
+} 
+
+QTabBar::tab {
+min-width: 21;
+background: #130e13; /*221922*/
+border-top-left-radius: 2px;
+border-top-right-radius: 2px;
+spacing: 6;
+padding: 2px;
+}
+
+QTabBar::tab:selected {
+border: 1px solid #4a3e4a;
+border-right-color: #130e13; 
+background: #130e13;
+}
+QTabBar::tab:!selected {
+border: 1px solid #221922;
+border-left-color: #130e13; 
+border-right-color: #4a3e4a; 
+background: #221922;
+}
+QTabBar::tab:first:!selected {
+border: 1px solid #130e13;
+border-right-color: #4a3e4a; 
+border-top-color: #4a3e4a; 
+border-bottom-color: #221922;
+background: #221922;
+}
+QTabBar::tab:last:!selected {
+border: 1px solid #130e13;
+border-right-color: #4a3e4a; 
+border-bottom-color: #4a3e4a; 
+border-top-color: #221922;
+background: #221922;
+}
+
+QPushButton {
+padding: 2;
+spacing: 6;
+background-color: #2e252e;
+border: 1px solid #4a3e4a;
+min-width: 74px;
+border-radius: 2px;
+}
+
+QPushButton:pressed {
+background-color: #1d161d;
+}
+
+QGroupBox {
+    background-color: #1d161d;
+    border: 1px solid #4a3e4a;
+    border-radius: 2px;
+	padding: 2;
+	padding-top: 20px;
+    /*margin-top: 1ex;  leave space at the top for the title */
+}
+QGroupBox::title {
+    subcontrol-origin: padding;
+    subcontrol-position: top center; /* position at the top center */
+    padding:  5px;
+}
+
+QComboBox {
+border-radius: 2px;
+padding: 2;
+spacing: 6;
+background-color: #2e252e;
+border: 1px solid #4a3e4a;
+min-width: 74px;
+}
+
+QComboBox:on {
+background-color: #1d161d;
+}
+
+QComboBox QAbstractItemView {
+    border: none;
+	background-color: #130e13;
+	selection-background-color: #221922;
+}
+
+QComboBox::drop-down {
+border-color: #2e252e;
+padding: 2;
+}
+
+
+QComboBox::down-arrow {
+    image: url(core/qt5/icons/down.svg);
+}
+
+QListView {
+border: 1px solid #4a3e4a;
+padding: 2;
+border-radius: 2px;
+background-color: #1d161d;
+font-size: 10pt;
+selection-background-color: #271d27;
+}
+
+QTreeView {
+border: 1px solid #4a3e4a;
+padding: 2;
+border-radius: 2px;
+background-color: #1d161d;
+selection-background-color: #271d27;
+}
+
+QLineEdit {
+border: 1px solid #4a3e4a;
+padding: 2;
+border-radius: 2px;
+background-color: #1d161d;
+selection-background-color: #271d27;
+}
+
+QFrame[frameShape=&quot;4&quot;] {
+color: #c8bdc8;
+}
+
+QFrame[frameShape=&quot;5&quot;] {
+color: #c8bdc8;
+}
+
+QTabBar QToolButton {
+border: none;
+background-color: #130e13
+}
+
+QCheckBox::indicator {
+border: 1px solid transparent;
+}
+QCheckBox::indicator:checked {
+border-color: transparent;
+background-color: transparent;
+image: url(core/qt5/icons/check.png);
+}
+
+QCheckBox::indicator:indeterminate {
+border-color: transparent;
+background-color: transparent;
+image: url(core/qt5/icons/check.png);
+}
+
+QCheckBox::indicator:unchecked {
+background-color: #221922;
+image: none;
+}
+
+QTreeView::indicator {
+border: 1px solid transparent;
+}
+QTreeView::indicator:checked {
+border-color: transparent;
+background-color: transparent;
+image: url(core/qt5/icons/check.png);
+}
+
+QTreeView::indicator:indeterminate {
+border-color: transparent;
+background-color: transparent;
+image: url(core/qt5/icons/check.png);
+}
+
+QTreeView::indicator:unchecked {
+background-color: #221922;
+image: none;
+}
+
+QTextBrowser {
+border: 1px solid #4a3e4a;
+padding: 2;
+border-radius: 2px;
+background-color: #1d161d;
+}
+</string>
+  </property>
   <property name="sizeGripEnabled">
    <bool>false</bool>
   </property>
@@ -63,7 +250,7 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;justify&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p align=&quot;justify&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
@@ -99,11 +286,11 @@ p, li { white-space: pre-wrap; }
        <attribute name="horizontalHeaderCascadingSectionResizes">
         <bool>true</bool>
        </attribute>
-       <attribute name="horizontalHeaderDefaultSectionSize">
-        <number>100</number>
-       </attribute>
        <attribute name="horizontalHeaderMinimumSectionSize">
         <number>51</number>
+       </attribute>
+       <attribute name="horizontalHeaderDefaultSectionSize">
+        <number>100</number>
        </attribute>
        <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
         <bool>false</bool>
